# jupyter-rospkg

./: .gitignore  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  tbump.toml
.github/workflows/: build.yml  check-release.yml
jupyter-config/nb-config/: jupyter_rospkg.json
jupyter-config/server-config/: jupyter_rospkg.json
jupyter_rospkg/: __init__.py  handlers.py  pkgs.py  workspace_parser.py
jupyter_rospkg/tests/: __init__.py  test_handlers.py
src/: handler.ts  index.ts
src/__tests__/: jupyter_rospkg.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyter_rospkg.spec.ts
