[build-system]
requires = ["hatchling>=1.3.1", "jupyterlab~=3.1"]
build-backend = "hatchling.build"

[project]
name = "jupyter_rospkg"
version = "0.1.0"
description = "A server extension for JupyterLab to handle ROS packages"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Isabel Paredes", email = "isabel.paredes@quantstack.net" },
]
keywords = ["Jupyter", "JupyterLab", "JupyterLab3"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "jupyter_server>=1.6,<2",
    "rospkg"
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync"
]

[project.urls]
Homepage = "https://github.com/ihuicatl/jupyter-rospkg"

